[package]
name = "Ising2D"
version = "0.1.0"
authors = ["cecri"]
edition = "2018"

[dependencies]
rand = "0.6"
itertools = "0.8"
itertools-num = "0.1"
nalgebra = { version = "0.18.0", features = ["serde-serialize"]}
#nalgebra = "0.18.0"
#rayon = "1.0"
scoped_threadpool = "0.1.9"
serde = "*"
serde-pickle = "*"
nalgebra-lapack = { version = "0.10.0", default-features = false, features = ["intel-mkl"] }
